menu (2.1.14) unstable; urgency=low

  * The "unreleased" release
  * Update German menu-section translation. Thanks Sebastian Rittau.
  * Update Hungarian menu-section translation. Thanks Attila Szervá.
  * Morten Brix Pedersen:
     - Change a wrong error message from "Could not open directory" to "Could
     not create directory".
     - Added --version option to update-menus.

 -- Bill Allombert <ballombe@debian.org>  Sat, 15 May 2004 00:17:07 +0200

menu (2.1.13) unstable; urgency=low

  * The "sell your car" release
  * Apply patch from Carlos O'Donell for hppa support.
    Closes: #248773. Thanks Grant Grundler.
  * Move wm-menu-config manpage to section 8 and insist it is deprecated.
  * Fix cppesc() to work correctly under non C locales.
  * Fix su-to-root to not change $HOME. This make sure xlib can find
    the X session cookie. Thanks to isaac on IRC for testing the patch. 
    Closes: #246886. This adresses the last case of #150314.
  * Add Ukrainian menu sections translation by Eugeniy Meshcheryakov.
    Closes: #244067.
  * Add Russian menu sections and messages translation by Dan Korostelev.
    Closes: #245353.
  * Add Greek menu sections translation by Konstantinos Margaritis.

 -- Bill Allombert <ballombe@debian.org>  Fri, 14 May 2004 17:17:07 +0200

menu (2.1.12) unstable; urgency=low

  * The "quickfix" release.
  * Jens Arvidsson:
    - Updated Swedish menu messages translation. 
  * Morten Brix Pedersen:
    - Fix bug where section="/" failed when translations were enabled.
      Closes: #243531.
    - Prevent infinite recursion in replace($s,$replace,$with) when $with 
      match $replace.
  * Fix typo in Chinese menu sections translation.  Closes: #242742. Thanks
    Carlos Z.F. Liu.
  * Add Turkish translations of menu messages and menu sections. 
    Closes: #243690. Thanks Cagatay Tengiz and Recai Oktas.
  * Update Catalan menu sections translation. Thanks Jordi Mallach.