@@ -7,6 +7,8 @@ menu (2.1.14) unstable; urgency=low
      - Change a wrong error message from "Could not open directory" to "Could
      not create directory".
      - Added --version option to update-menus.
+  * Rename 'repeat_lang' menu option to 'outputlanguage' to match
+    'outputencoding'.
 
  -- Bill Allombert <ballombe@debian.org>  Sat, 15 May 2004 00:17:07 +0200
 
